[package]
name = "ognlib"
version = "0.8.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Some code that is written to practice Rust"
authors = ["Maksim Bondarenkov"]
repository = "https://github.com/ognevnydemon/ognlib"
readme = "README.md"
rust-version = "1.84.0"

[dependencies]
cfg-if = "1.0"
fastrand = { version = "2.2", default-features = false }
num-bigint = { version = "0.4", default-features = false }
rayon = { version = "1.10", optional = true }
regex = { version = "1.11", default-features = false }
thiserror = { version = "2.0", default-features = false }

[features]
default = ["std"]
std = ["rayon", "regex/default"]
